<resources>
    <string name="app_name">MyMemo</string>
    <string name="drawer_all_memo">모든 메모</string>
    <string name="add_label_edit_text_hint">라벨 이름을 입력하세요</string>
    <string name="search_memo">메모 검색</string>
    <string name="edit_memo_edit_text_hint">내용</string>
    <string name="edit_memo_title_hint">제목</string>
    <string name="search_label">라벨 검색</string>
    <string name="add_label">라벨 추가하기&#160;</string>
    <string name="label_name">라벨 이름</string>
    <string name="noSearchResult">일치하는 메모가 없습니다</string>
    <string name="edit_label">라벨 수정하기&#160;</string>
    <string name="setting">설정</string>
    <string name="memo_export">메모 데이터 내보내기</string>
    <string name="memo_export_description">저장되는 파일은 \"memo.db\", \"memo.db-shm\", \"memo.db-wal\" 3개입니다. 안드로이드 보안정책으로 인해 특정 폴더에는 저장이 안 될 수 있습니다.</string>
    <string name="memo_import">메모 데이터 가져오기</string>
    <string name="memo_import_description">메모를 가져오기 위해서는 \"memo.db\", \"memo.db-shm\", \"memo.db-wal\" 3가지 파일 모두 선택한 폴더에 있어야 합니다. 기존의 메모는 사라집니다.</string>
    <string name="memo_backup">메모 백업하기</string>
    <string name="memo_backup_description">백업 파일은 인증된 구글 아이디와 연결되어 백업됩니다. 기존의 백업된 파일은 덮어 씌워집니다.</string>
    <string name="memo_restore">메모 복원하기</string>
    <string name="memo_restore_description">인증된 구글 아이디와 연결된 파일로 메모를 복원합니다. 기존의 메모는 사라집니다.</string>
    <string name="login_google_id">계정 연동</string>
    <string name="login_google_id_description">구글 아이디로 계정에 로그인합니다.</string>
    <string name="logout_google_id">계정 연동 해제</string>
    <string name="logout_google_id_description">연결된 계정을 로그아웃합니다.</string>
    <string name="basic_setting">기본 설정</string>
    <string name="back_up_end_vibration">백업 완료 시 진동</string>
    <string name="vibration_setting_description">이 설정을 켜면 백업이나 복원 완료시 진동이 울립니다.</string>
    <string name="local_backup">메모 로컬 백업</string>
    <string name="cloud_backup">메모 클라우드 백업</string>
    <string name="backing_up">메모를 백업하고 있습니다</string>
    <string name="restoring">메모를 복원하고 있습니다</string>
    <string name="add_time_btn_setting">시간 추가 버튼 설정</string>
    <string name="add_time_btn_setting_description">메모의 시간 추가 버튼을 설정합니다.\n연도 → OOOO년 O월 O일\n월 → O월 O일\n시간 → 오후 OO:OO</string>
    <string name="year">연도</string>
    <string name="month">월</string>
    <string name="time">시간</string>
    <string name="input_search_term">검색어를 입력하세요</string>
</resources>