<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/memoListBg"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    tools:context=".SettingFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/gmarket_sans_medium"
        android:text="설정"
        android:textColor="@color/setting_main_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/memo_local_backup_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="메모 로컬 백업"
                android:textColor="@color/setting_category_color"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/memo_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memo_local_backup_textView">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/memo_export"
                    android:textColor="@color/setting_main_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5sp"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/memo_export_description"
                    android:textColor="@color/setting_description_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/memo_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memo_export">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/memo_import"
                    android:textColor="@color/setting_main_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5sp"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/memo_import_description"
                    android:textColor="@color/setting_description_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/memo_cloud_backup_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="메모 클라우드 백업"
                android:textColor="@color/setting_category_color"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memo_import" />

            <LinearLayout
                android:id="@+id/login_google_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memo_cloud_backup_textView">

                <TextView
                    android:id="@+id/login_google_id_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/login_google_id"
                    android:textColor="@color/setting_main_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/login_google_id_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5sp"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/login_google_id_description"
                    android:textColor="@color/setting_description_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/memo_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_google_id">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/memo_backup"
                    android:textColor="@color/setting_main_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5sp"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/memo_backup_description"
                    android:textColor="@color/setting_description_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/memo_restore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memo_backup">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/memo_restore"
                    android:textColor="@color/setting_main_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5sp"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/memo_restore_description"
                    android:textColor="@color/setting_description_color"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>