<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/memoListBg"
    android:paddingVertical="20dp"
    tools:context=".MemoSearchFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/back_btn"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_edit_text" />

    <com.pnlkc.mymemo.util.ClearFocusEditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:hint="@string/search_memo"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/memoEditText"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:layout_constraintEnd_toStartOf="@id/search_edit_text_clear_btn"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_edit_text_clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel_btn"
        android:visibility="invisible"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:overScrollMode="never"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text" />

    <LinearLayout
        android:id="@+id/main_result_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/search_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_medium"
            android:gravity="center"
            android:text="@string/input_search_term"
            android:layout_marginTop="20dp"
            android:textColor="@color/memoEditText"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_result_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/search_no_result_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_medium"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/noSearchResult"
            android:textColor="@color/memoEditText"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>