<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerFragment">

    <View
        android:id="@+id/drawer_empty_space"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="100dp"
        android:background="@color/drawer_bg"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/gmarket_sans_bold"
                android:text="@string/app_name"
                android:textColor="@color/drawer_title_text"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/all_memo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/drawer_unselected_bg"
                android:gravity="center_vertical"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/all_memo_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:text="@string/drawer_all_memo"
                    android:textColor="@color/drawer_main_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/drawer_divisionLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/gmarket_sans_medium"
                android:text="라벨"
                android:textColor="@color/drawer_main_color"
                android:textSize="12sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/drawer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_label_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="gone">

                <com.example.mymemo.util.ClearFocusEditText
                    android:id="@+id/add_label_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_outline"
                    android:hint="@string/add_label_edit_text_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/drawer_main_color"
                    android:textColorHint="@color/drawer_edit_text_hint"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/add_label_confirm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/check_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/add_label_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/label_add_btn_icon" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmarket_sans_medium"
                    android:text="@string/add_label"
                    android:textColor="@color/drawer_main_color"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


